Pull images from wp blog

--- a/_posts/2011-06-12-t-shirt-qa.md
+++ b/_posts/2011-06-12-t-shirt-qa.md
@@ -20,7 +20,7 @@ We're celebrating Appsterdam launch party weekend by having a small batch of han
 
 The simplified Appsterdam logo in red and black expertly silkscreened onto a light gray T-shirt. You can imagine something like our awesome <a href="http://appsterdam.rs">teaser site</a>, but with fewer words, and as a T-shirt.
 
-<img style="display:block; margin-left:auto; margin-right:auto;" src="http://mur.mu.rs/wp-content/uploads/mur.mu.rs/2011/06/T-shirt-Logo.png" alt="T shirt Logo" title="T-shirt Logo.png" border="0" width="357" height="300" />
+<img style="display:block; margin-left:auto; margin-right:auto;" src="/images/assets/T-shirt-Logo.png" alt="T shirt Logo" title="T-shirt Logo.png" border="0" width="357" height="300" />
 
 <strong>Are there women's sizes?</strong>
 
